Landing page buttons alignment fix

--- a/client/src/style/LandingPage.css
+++ b/client/src/style/LandingPage.css
@@ -2,12 +2,12 @@
 
 @keyframes riseUp {
   from {
-    transform: translateY(50px); 
-    opacity: 0; 
+    transform: translateY(50px);
+    opacity: 0;
   }
   to {
     transform: translateY(0);
-    opacity: 1; 
+    opacity: 1;
   }
 }
 
@@ -17,29 +17,28 @@
   flex-direction: column !important;
   justify-content: center !important;
   margin-right: 250px;
-  align-items: center; 
-  height: 100vh; 
+  align-items: center;
+  height: 100vh;
   text-align: center;
   animation: riseUp 0.5s ease-out forwards;
 }
 
 .icon img.logo {
-  width: 100%; 
-  height: auto; 
-  animation-delay: 0.2s; 
+  width: 100%;
+  height: auto;
+  animation-delay: 0.2s;
 }
 
 /* Style for buttons container */
 .landing-page .d-grid {
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
   gap: 20px;
   width: auto;
   max-width: 600px;
   align-items: center;
-  marin: auto;
   animation-delay: 0.4s;
-  justify-content: center; 
+  justify-content: center;
 }
 
 
@@ -54,15 +53,13 @@
   text-decoration: none;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
-  width: auto; 
+  width: auto;
 }
 
 .landing-page .btn-custom:hover {
   background-color: rgba(0, 0, 0, 0.75);
   color: white;
 }
-
-
 
 /* Ensure no additional margins are affecting the centering */
 body, html {
